// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should expose the correct methods 1`] = `
Object {
  "adapterType": "s3",
  "getFile": [Function],
  "getJson": [Function],
  "getUrl": [Function],
  "isValid": [Function],
  "listSubDirectories": [Function],
  "maxConcurrentRequests": 20,
  "putDir": [Function],
  "putFile": [Function],
  "putFileContent": [Function],
}
`;

exports[`test getFile path/not-a-json.json 1`] = `
Object {
  "code": "file_not_valid",
  "msg": "File \\"path/not-a-json.json\\" not valid",
}
`;

exports[`test getFile path/not-a-json.json 2`] = `undefined`;

exports[`test getFile path/not-found.json 1`] = `
Object {
  "code": "file_not_found",
  "msg": "File \\"path/not-found.json\\" not found",
}
`;

exports[`test getFile path/not-found.json 2`] = `undefined`;

exports[`test getFile path/not-found.txt 1`] = `
Object {
  "code": "file_not_found",
  "msg": "File \\"path/not-found.txt\\" not found",
}
`;

exports[`test getFile path/not-found.txt 2`] = `undefined`;

exports[`test getFile path/test.json 1`] = `null`;

exports[`test getFile path/test.json 2`] = `
Object {
  "data": "Hello!",
}
`;

exports[`test getFile path/test.txt 1`] = `null`;

exports[`test getFile path/test.txt 2`] = `"Hello!"`;

exports[`test getUrl  1`] = `"/test/1.0.0/test.js"`;

exports[`test listObjects when bucket is not empty for folder components/image/ 1`] = `
Array [
  "1.0.0",
  "1.0.1",
]
`;

exports[`test put dir (failure) 1`] = `
Object {
  "code": 1234,
  "hostname": "hostname",
  "message": "an error message",
  "region": "us-west2",
  "retryable": true,
  "statusCode": 500,
  "time": 2018-01-01T00:00:00.000Z,
}
`;
